# datachat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.gradle  builddocker.sh  docker-compose.yml  initdb.sh  sample_db.sql  settings.gradle
core/: build.gradle
core/src/main/java/datachat/core/: QueryResult.java
datachat/: Cargo.toml  build.rs
datachat/src/: in_memory_chat_repository.rs  main.rs  message_serialization.rs  mock_chat_repository.rs
datachat/src/domain/: chat_repository.rs  mod.rs  websocket_messages.rs
datachat_pg/: Cargo.toml
datachat_pg/src/: lib.rs
pg/: build.gradle
pg/src/main/java/datachat/pg/: PgConnectionConfig.java  PostgresTargetDatabase.java
protobuf/: targetdatabase.proto  ws.proto  wsclient.proto  wsserver.proto
src/main/java/datachat/webserver/: DatachatApplication.java
src/test/java/datachat/webserver/: DatachatApplicationTests.java
targetdb/: Cargo.toml
targetdb/src/: db.rs  lib.rs  mock.rs
web/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/app/: hooks.ts  store.ts
web/src/features/api/: api.ts
web/src/features/questions/: Questions.tsx  questionsSlice.ts
web/src/features/schema/: Schema.tsx  schemaSlice.ts
webserver/: build.gradle
webserver/src/main/java/datachat/webserver/: DatachatApplication.java  InMemoryChatRepository.java
webserver/src/main/resources/: application.yml
webserver/src/test/java/datachat/webserver/: InMemoryChatRepositoryTest.java
(+18 files in other folders)
